removed markup for design meeting

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                                     <div class="form-group">
                                         <input id="signup-email" class="center-block" type="email" placeholder="Email" />
                                         <input id="signup-code" class="center-block" type="password" placeholder="Invite Code"  />
-                                        <input class="center-block" type="radio" name="patient-type" value="patient" checked><span>Patient</span>
-                                        <input class="center-block" type="radio" name="patient-type" value="caregiver"><span class="pull-left">Caregiver</span>
+                                        <!--<input class="center-block" type="radio" name="patient-type" value="patient" checked><span>Patient</span>
+                                        <input class="center-block" type="radio" name="patient-type" value="caregiver"><span class="pull-left">Caregiver</span>-->
                                 
                                     </div>
                                     <button type="submit" class="btn btn-green center-block" value="Send">SIGN UP</button>
