--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                         <p ng-message="required">A name is required.</p>
                                     </div>
                                 </div>
-                                <button type="submit" class="center-block" value="Send">INVITE</button>
+                                <button type="submit" class="center-block" value="Send">Invite</button>
                             </form>
                         </div>
                             <div class="row">
@@ -414,7 +414,7 @@
                                             </div>
                                         </div>
                                         <div class="pull-right border-white">
-                                            <btn type="submit" class="" value="Send">Send</btn>
+                                            <button type="submit" class="contact-btn" value="Send">Send</button>
                                         </div>
                                         
                                     </form>
