program display size fix

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ maximum-scale=1.0; user-scalable=no" />
                                 </li>
                         </div>
                         <div class="row center-block" ng-show="selectedProgramId != -1">
-                            <iframe ng-src="{{trustSrc(selectedProgramEmbedSrc)}}" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_playlist" align="middle" name="wistia_playlist" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                            <iframe id="program-playlist" ng-src="{{trustSrc(selectedProgramEmbedSrc)}}" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_playlist" align="middle" name="wistia_playlist" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         </div>
                         <div  class="row">
                             <img class="section-img" height="100px" src="images/programs.png" align="middle" />
