--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ maximum-scale=1.0; user-scalable=no" />
                                     <li class="active" spy="lm-inspirations">INSPIRATIONS</li>
                                     <li spy="lm-programs">PROGRAMS</li>
                                     <li spy="lm-meditations">MEDITATIONS</li>
-                                    <li spy="lm-login" ng-hide="loggedIn === true">LOG IN</li>
-                                    <li spy="lm-invites" ng-hide="loggedIn === false || sessionUser.userType != 0">INVITES</li>
+                                    <li spy="lm-login" ng-hide="true || loggedIn === true">LOG IN</li>
+                                    <li spy="lm-invites" ng-hide="true || loggedIn === false || sessionUser.userType != 0">INVITES</li>
                                     <li spy="lm-contact">CONTACT</li>
-                                    <li ng-hide="loggedIn===false" ng-click="logout()">LOG OUT</li>
+                                    <li ng-hide="true || loggedIn===false" ng-click="logout()">LOG OUT</li>
                                 </ul>
                             </div><!--/.nav-collapse -->
                         </div><!--/.container-fluid -->
@@ -186,7 +186,7 @@ maximum-scale=1.0; user-scalable=no" />
                             </div>
                     </section>
                      
-                    <section id="lm-login" class="center-block text-center" ng-controller="LoginController as lc" ng-hide="loggedIn === true" >
+                    <section id="lm-login" class="center-block text-center" ng-controller="LoginController as lc" ng-hide="true || loggedIn === true" >
                         <div id="wrapper-login">
                             <div class="row">
                                 <img class="section-img" height="100px" src="images/profile.png" align="middle" />
