display cancel subscription

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ maximum-scale=1.0; user-scalable=no" />
                             </div>
                             <br />
                             <br />
-                            <div class="col-xs-offset-4 col-sm-4 border-white" ng-hide="sessionUser.stripeID = 'invited'" ng-click="displayReady = true">
+                            <div class="col-xs-offset-4 col-sm-4 border-white" ng-hide="sessionUser.stripeID === 'invited'" ng-click="displayReady = true">
                                 <button>Cancel Subscription</button>
                             </div>
                         </div>
