playlist count online

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ maximum-scale=1.0; user-scalable=no" />
                                 </li>
                         </div>
                         <div class="row center-block" ng-show="selectedProgramId != -1">
-                            <div ng-bind-html="selectedProgramEmbed"></div>
+                            <div class="center-block" ng-bind-html="selectedProgramEmbed"></div>
                             <br />
                         </div>
                         <div  class="row">
