--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ maximum-scale=1.0; user-scalable=no" />
         <script src="bower_components/angular-messages/angular-messages.js" type="text/javascript"></script>
         <script src="scripts/vendors/bootstrap.min.js"  type="text/javascript"></script>
         <script src="scripts/vendors/parse-1.6.14.js"></script>
-        <script src="http://fast.wistia.com/assets/external/E-v1.js" async></script>
         <script src="bower_components/angular-stripe-checkout/angular-stripe-checkout.js"></script>
         
         <script src="scripts/misc/lmApp.models.js" type="text/javascript"></script>
@@ -298,7 +297,7 @@ maximum-scale=1.0; user-scalable=no" />
                             </div>
                       <div class="row">
                         <div ng-hide="displayBilling === true">
-                         <div class="col-sm-5 text-center center-block">
+                         <div id="login-container" class="col-sm-5 text-center center-block">
                              <h3 class="center-block">Login</h3>
                              <form name="loginForm" ng-submit="loginForm.$valid && login()" novalidate>
                                  <div class="form-group">
