--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ maximum-scale=1.0; user-scalable=no" />
         <script src="bower_components/angular-messages/angular-messages.js" type="text/javascript"></script>
         <script src="scripts/vendors/bootstrap.min.js"  type="text/javascript"></script>
         <script src="scripts/vendors/parse-1.6.14.js"></script>
+        <script src="http://fast.wistia.com/assets/external/E-v1.js" async></script>
+        <script charset="ISO-8859-1" src="http://fast.wistia.com/assets/external/playlist-v1.js"></script>
         <script src="bower_components/angular-stripe-checkout/angular-stripe-checkout.js"></script>
         
         <script src="scripts/misc/lmApp.models.js" type="text/javascript"></script>
