adding server zip

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                         <input type="radio" name="signupType" value="0" ng-model="userSignup.patientType" ng-required="!userSignup.patientType">Patient
                                      </label>
                                      <label class="radio-inline">
-                                        <input type="radio" name="signupType" value="1" ng-model="userSignup.patientType" ng-required="!userSignup.patientType">Caretaker
+                                        <input type="radio" name="signupType" value="1" ng-model="userSignup.patientType" ng-required="!userSignup.patientType">Caregiver
                                      </label>
                                      
                                      <div class="help-block" ng-messages="signupForm.signupType.$error">
@@ -411,7 +411,7 @@
                               <br />
                               <div>
                                 <button stripe-checkout="signupMonthly" class="border-white"
-                                    data-key="pk_test_BQNNMSnMi4hsWDwhjg0qIbRz"
+                                    data-key="pk_live_RSrldwI1AbSIhxQAqZR39LzR"
                                     data-name="Loving Meditations"
                                     data-description="Monthly Payment"
                                     data-image="https://s3.amazonaws.com/stripe-uploads/acct_18KX5uAgBtX5wKi3merchant-icon-1467753633891-icon.png"
@@ -430,7 +430,7 @@
                               <br />
                               <div>
                                 <button stripe-checkout="signupAnnually" class="border-white"
-                                    data-key="pk_test_BQNNMSnMi4hsWDwhjg0qIbRz"
+                                    data-key="pk_live_RSrldwI1AbSIhxQAqZR39LzR"
                                     data-amount="3899"
                                     data-name="Loving Meditations"
                                     data-description="Annual Payment"
